--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-sweetalert": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^6.4.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +25,8 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-use": "^17.5.0",
+    "sweetalert2": "^11.10.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
