--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-scroll": "^1.9.0",
     "react-use": "^17.5.0",
     "sweetalert2": "^11.10.7",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
