JWT token initialized 4/27

--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,10 @@ DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=visionedu
 
+
+JWT_SECRET=mysecret
+
+
 FIREBASE_API_KEY=AIzaSyDuXPxQCBAW0h3KF7iNloanMDhFgONVRfU
 FIREBASE_AUTH_DOMAIN=vision-institute-80d7f.firebaseapp.com
 FIREBASE_PROJECT_ID=vision-institute-80d7f
