--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "express-session": "^1.18.0",
     "firebase": "^10.11.0",
     "jsonwebtoken": "^9.0.2",
