--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.11.1",
     "lucide-react": "^0.365.0",
     "mdb-react-ui-kit": "^7.2.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-sweetalert": "^5.2.0",
