--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.22.3",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-use": "^17.5.0",
