--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.0",
     "firebase": "^10.11.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
     "qrcode": "^1.5.3"
