--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "firebase": "^10.11.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.365.0",
     "mdb-react-ui-kit": "^7.2.0",
     "moment": "^2.30.1",
